# happstack-clckwrks

./: Makefile
clckwrks-theme-happstack/: Makefile  Theme.hs  clckwrks-theme-happstack.cabal
clckwrks-theme-happstack/Theme/: Blog.hs  Home.hs  HomeOld.hs  Page.hs  Template.hs
clckwrks-theme-happstack/content/: whatif.md
clckwrks-theme-happstack/data/: style.css
clckwrks-theme-happstack/data/css/: bootstrap-responsive.css  bootstrap-responsive.min.css  bootstrap.css  bootstrap.min.css
clckwrks-theme-happstack/swatchmaker/swatch/: bootswatch.less  variables.less
happstack-dot-com/: .ghci  Backups.hs  Main.hs  URL.hs  happstack-dot-com.cabal  run.sh
happstack-dot-com/content/: community.md  docs.md  download.md  happstack-7.md  happstack-8.md  whatif.md
happstack-dot-com/debian/: Debianize.hs  changelog  control  copyright  rules
