Name:                clckwrks-theme-happstack
Version:             0.5.3
Synopsis:            Theme for happstack.com
Description:         Theme for happstack.com for use with clckwrks.
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6
Data-Files:
        data/css/bootstrap-responsive.min.css
        data/css/bootstrap.css
        data/css/bootstrap-responsive.css
        data/css/bootstrap.min.css
        data/css/hscolour.css
        data/img/glyphicons-halflings.png
        data/img/glyphicons-halflings-white.png

Library
  Build-tools:         hsx2hs
  Exposed-modules:     Theme
                       Paths_clckwrks_theme_happstack

  Build-depends:
        base          < 5,
        clckwrks      >= 0.18 && < 0.21,
        containers    >= 0.4 && < 0.6,
        hsp           >= 0.9 && < 0.11,
        text          == 0.11.*
