Name:                clckwrks-theme-happstack
Version:             0.6.3
Synopsis:            Theme for happstack.com
Description:         Theme for happstack.com for use with clckwrks.
Homepage:            http://www.clckwrks.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6
Data-Files:
        data/css/bootstrap-responsive.min.css
        data/css/bootstrap.css
        data/css/bootstrap-responsive.css
        data/css/bootstrap.min.css
        data/css/hscolour.css
        data/img/glyphicons-halflings.png
        data/img/glyphicons-halflings-white.png

source-repository head
    type:     darcs
    subdir:   happstack-clckwrks
    location: http://hub.darcs.net/Happstack/happstack-clckwrks

Library
  Build-tools:         hsx2hs
  Exposed-modules:     Theme
                       Paths_clckwrks_theme_happstack

  Build-depends:
        base                              < 5,
        clckwrks               >= 0.23 && < 0.24,
        containers             >= 0.4  && < 0.6,
        happstack-authenticate >= 2.0  && < 2.1,
        hsp                    >= 0.9  && < 0.12,
        mtl                    >= 2.0  && < 2.3,
        text                   >= 0.11 && < 1.3,
        web-plugins            >= 0.2  && < 0.3


