Name:                clckwrks-theme-happstack
Version:             0.7.1.2
Synopsis:            Theme for happstack.com
Description:         Theme for happstack.com for use with clckwrks.
Homepage:            http://www.happstack.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2015 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.6
Data-Files:
   data/css/bootstrap-theme.css
   data/css/bootstrap-theme.css.map
   data/css/bootstrap-theme.min.css
   data/css/bootstrap.css
   data/css/bootstrap.css.map
   data/css/bootstrap.min.css
   data/css/happstack-theme.css
   data/css/happstack-theme.min.css
   data/css/hscolour.css
   data/fonts/glyphicons-halflings-regular.eot
   data/fonts/glyphicons-halflings-regular.svg
   data/fonts/glyphicons-halflings-regular.ttf
   data/fonts/glyphicons-halflings-regular.woff
   data/fonts/glyphicons-halflings-regular.woff2
   data/js/bootstrap.js
   data/js/bootstrap.min.js
   data/js/npm.js

source-repository head
    type:     git
    subdir:   clckwrks-theme-happstack
    location: https://github.com/Happstack/happstack-clckwrks

Library
  Exposed-modules:     Theme
                       Paths_clckwrks_theme_happstack

  Build-depends:
        base                              < 5,
        clckwrks               >= 0.23 && < 0.25,
        containers             >= 0.4  && < 0.7,
        happstack-authenticate >= 2.3  && < 2.4,
        hsp                    >= 0.9  && < 0.12,
        hsx2hs                 >= 0.13 && < 0.15,
        mtl                    >= 2.0  && < 2.3,
        text                   >= 0.11 && < 1.3,
        web-plugins            >= 0.2  && < 0.3


