Name:                happstack-dot-com
Version:             0.2.1
Synopsis:            happstack.com
Description:         The happstack.com website.
Homepage:            http://www.happstack.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Simple
Cabal-version:       >=1.2

Flag plugins
     Description: enable dynamic recompilation
     Default: False

Flag backups
     Description: enable the backups executable (currently disabled by default do to wacky dependencies not on hackage)
     Default: False

Executable happstack-dot-com-server
  Main-is: Main.hs
  ghc-options: -threaded -O2 -rtsopts
  cpp-options: -DCABAL
  Extensions: CPP
  Build-depends:
        base                     >4 && < 5,
        bytestring               >= 0.9 && < 0.11,
        clckwrks                 == 0.13.*,
        clckwrks-plugin-media    == 0.3.*,
        clckwrks-plugin-ircbot   == 0.3.*,
        clckwrks-theme-happstack == 0.2.*,
        containers               >= 0.4 && < 0.6,
        happstack-server         >= 7.0.4,
        mtl                      >= 2.0,
        text                     == 0.11.*,
        web-plugins              == 0.1.*,
        web-routes               == 0.27.*

Executable happstack-dot-com-backups
 Main-Is: Backups.hs
 if flag(backups)
   Buildable: True
   GHC-Options: -threaded -Wall -Wwarn -O2 -fno-warn-name-shadowing -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-binds -fno-warn-orphans -fwarn-unused-imports -fno-spec-constr
   Build-depends: base > 4 && < 5,
                  archive >= 1.2.9,
                  Extra
 else
  Buildable: False
