Name:                happstack-dot-com
Version:             0.4.9.1
Synopsis:            happstack.com
Description:         The happstack.com website.
Homepage:            http://www.happstack.com/
License:             BSD3
License-file:        LICENSE
Author:              Jeremy Shaw
Maintainer:          Jeremy Shaw <jeremy@n-heptane.com>
Copyright:           2012 Jeremy Shaw, SeeReason Partners LLC
Category:            Clckwrks
Build-type:          Custom
Cabal-version:       >=1.6

source-repository head
    type:     git
    subdir:   happstack-dot-com
    location: https://github.com/Happstack/happstack-clckwrks

Flag plugins
     Description: enable dynamic recompilation
     Default: False

Flag backups
     Description: enable the backups executable (currently disabled by default do to wacky dependencies not on hackage)
     Default: False

Executable happstack-dot-com-server
  Main-is: Main.hs
  ghc-options: -threaded -O2 -rtsopts -with-rtsopts=-I0
  cpp-options: -DCABAL
  Extensions: CPP
  Build-tools:                   hsx2hs
  Build-depends:
        base                     >  4    && < 5,
        bytestring               >= 0.9  && < 0.11,
        clckwrks                 >= 0.23 && < 0.25,
        clckwrks-plugin-media    == 0.6.*,
--        clckwrks-plugin-ircbot   == 0.6.*,
        clckwrks-plugin-page     >= 0.3 && < 0.5,
        clckwrks-theme-happstack == 0.7.*,
        containers               >= 0.4 && < 0.7,
        happstack-server         >= 7.0.4,
        mtl                      >= 2.0,
        text                     >= 0.11 && < 1.3,
        web-plugins              >= 0.1 && < 0.3,
        web-routes               == 0.27.*

Executable happstack-dot-com-backups
 Main-Is: Backups.hs
 if flag(backups)
   Buildable: True
   GHC-Options: -threaded -Wall -Wwarn -O2 -fno-warn-name-shadowing -fno-warn-missing-signatures -fwarn-tabs -fno-warn-unused-binds -fno-warn-orphans -fwarn-unused-imports -fno-spec-constr
   Build-depends: base > 4 && < 5,
                  archive >= 1.2.9,
                  cabal-debian >= 4.24,
                  sr-extra,
                  network-uri
 else
  Buildable: False
